--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ version_cursemaven=2.1.+
 
 version_mc=1.12.2
 version_forge=14.23.5.2838
-version_the=v2.2.3-delfayne-fork-SNAPSHOT-2
+version_the=v2.2.5
 
 # Required Mods
 version_jei=1.12.2:+
