--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ AE2-RV6 ]
+    branches: [ main ]
   pull_request:
-    branches: [ AE2-RV6 ]
+    branches: [ main ]
 
 jobs:
   build:
