--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     provided "mcjty.theoneprobe:TheOneProbe-${version_mc_no_patch}:${version_top}:api"
     deobfCompile("curse.maven:baubles-227083:${version_ba}")
     deobfCompile("curse.maven:thaumcraft-223628:${version_tc}")
-    deobfCompile("curse.maven:appliedenergistics2-223794:${version_ae2}") {
+    deobfCompile("curse.maven:ae2-extended-life-570458:${version_ae2}") {
         transitive = false
     }
 
@@ -107,6 +107,8 @@ jar {
         attributes 'FMLAT': 'theeng_at.cfg'
     }
     from sourceSets.api.output
+
+    exclude "yalter/**"
 }
 
 javadoc {
