--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
-/*
-!/.gitignore
-!/ChangeLog*.txt
-!/Features.md
-!/LICENSE
-!/README.md
-!/src
-!build.gradle
-!gradle.properties
-!gradlew
-!gradlew.bat
-!gradle
-*.psd
+#IDE
+.idea/*
+*.iml
+!.idea/codeStyles
+!.idea/compiler.xml
+!.idea/encodings.xml
+!.idea/externalDependencies.xml
+!.idea/runConfigurations
+!.idea/vcs.xml
+
+#Java
+target
+.mvn/
+.gradle
+build/
+
+# Minecraft
+run/
+
+#Other
+*.db
+*.log
+*.zip
