Adding Minecraft version to build artefacts

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,19 +10,12 @@ org.gradle.caching=true
 modVersion=2.2.8
 mavenGroup=org.dv.minecraft.thaumicenergistics
 modArchiveName=thaumic-energistics-extended-life
-modName="Thaumic Energistics
-mcVersion=1.12.2
+modName=Thaumic Energistics
+minecraftVersion=1.12.2
 forgeVersion=14.23.5.2860
 archiveBase=thaumicenergistics
 # Access Transformer files should be in the root of `resources` folder and with the filename formatted as: `{archives_base_name}_at.cfg`
 useAccessTransformer=true
-
-# Optional/Runtime
-version_hwyla=2568753
-version_top=1.12-1.4.28-17
-version_tjei=2705304
-version_ccl=2779848
-
 # In Game Information Book, Optional
 version_rf=2920436
 version_bc=1.12.2-2.4.19.214
