Adjusting build process to include mixins

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,7 @@ forgeVersion=14.23.5.2860
 archiveBase=thaumicenergistics
 # Access Transformer files should be in the root of `resources` folder and with the filename formatted as: `{archives_base_name}_at.cfg`
 useAccessTransformer=true
+useMixins=true
 # In Game Information Book, Optional
 version_rf=2920436
 version_bc=1.12.2-2.4.19.214
