--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ curse-top = { module = "curse.maven:the-one-probe-245211", version = "2667280" }
 curse-baubles = { module = "curse.maven:baubles-227083", version = "2518667" }
 curse-thaumcraft = { module = "curse.maven:thaumcraft-223628", version = "2629023" }
 curse-thaumicJei = { module = "curse.maven:thaumic-jei-285492", version = "2705304" }
+curse-thaumicAug = { module = "curse.maven:thaumic-augmentation-319441", version = "5129455" }
+curse-aaf = { module = "curse.maven:advanced-alchemical-furnace-960604", version = "5053524" }
 curse-ae2 = { module = "curse.maven:ae2-extended-life-570458", version = "4505114" }
 
 # Misc
